--- a/index.html
+++ b/index.html
@@ -2,13 +2,68 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Stuff I Think About</title>
+  <title>Easier Assignment</title>
   <link rel = "stylesheet" href = 'style.css'>
-  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-  <!-- Add a CSS Reference Here! -->
+   <!-- Add a CSS Reference Here! -->
 </head>
 <body>
-  <h1>I'm a deep thinking dude.</h1>
 
-</body>
-</html>
+
+ <div class = "top-border">
+ </div> 
+
+
+ <div class = "head-sec">
+<p> header </p>
+</div>
+
+<div class = "middle-border"> </div> 
+
+
+<div class = "nav-sec">
+<p> nav </p>
+</div>
+
+<div class = "third-border"> </div> 
+
+
+<div class = "split-box">
+
+
+    <div class = "section-box">
+	    <p> section </p>
+
+    <div class = "article-box">
+	    <P>article</p>
+   
+       <div class = "headline-box" >
+       		    <P>H1, H2, H3</p>
+      </div>
+             <div class = "mini-border-box" >
+      </div>
+
+      <div class = "headline-box" >
+        <P>P</p>
+      </div>
+
+   </div>
+
+</div>	
+
+<div class = "aside-box">
+	<p> aside </p>
+</div>	
+
+</div>
+
+<div class = "final-border"> </div> 
+
+
+<div class = "footer-sec">
+<p> footer </p>
+</div>
+
+
+
+
+
